<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_the_app"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/infoContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_info"
            android:textSize="16sp" />

        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/mixed_button_background"
            android:text="@string/close"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>
